--- a/Portfolio VaR.ipynb
+++ b/Portfolio VaR.ipynb
@@ -402,10 +402,11 @@
     "\n",
     "\n",
     "#### t dist\n",
-    "When we are using the t-distribution\n",
-    "$$\\sigma \\frac{(dof-2)+(T^{-1}(\\alpha ))^{2}\\tau (T^{-1}(\\alpha ))}{(dof-2-1)\\alpha } - \\mu_{portfolio}$$\n",
-    "where $T(x)$ is the standard t-distribution c.d.f and $\\tau$ is the standard t-distribution p.d.f\n",
-    "\n"
+    "we have\n",
+    "$$\\sigma = \\sigma_{portfolio}*\\sqrt{\\frac{df-2}{df}}$$\n",
+    "Then the expected shortfall is\n",
+    "$$ES_{\\alpha}=\\sigma \\frac{df + (T^{-1}(\\alpha))^{2}}{df-1}\\frac{\\tau (T^{-1}(\\alpha))}{\\alpha}-\\mu_{portfolio}$$\n",
+    "Where $\\tau$ is the standard t-distribution PDF and $T$ is the standard t-distribution CDF\n"
    ]
   },
   {
